package com.example.framework.utils

object Constants {
    const val BASE_API_URL = "https://api.trending-github.com/github/"
    const val EN = "en"
    const val DB_NAME = "REPOS_DB"
    const val REPOS_TABLE = "repos"
    const val IO_DISPATCHER = "IO_DISPATCHER"

    object TestTags {
        const val WELCOME_BTN = "WELCOME_BTN"
        const val SHOW_FILTERS = "SHOW_FILTERS"
        const val SAVE_BTN = "SAVE_BTN"
        const val DELETE_BTN = "DELETE_BTN"
        const val BACK_BTN = "BACK_BTN"
        const val ACCEPT_FILTER = "ACCEPT_FILTER"
        const val REPO_DESC = "REPO_DESC"
        const val PICK_LANGUAGE = "PICK_LANGUAGE"
        const val NO_CONTENT = "NO_CONTENT"
    }
}