...
                            shape = RoundedCornerShape(16.dp),
                            colors = ButtonDefaults.buttonColors(
                                backgroundColor = getOrange(),
                                contentColor = Color.White
                            )
                        ) {
                            Text(text = "Delete")
                        }
                    }
                    Button(
                        onClick = {
                            openUrl(state.repo!!)
                        }, modifier = Modifier
...
                        shape = RoundedCornerShape(16.dp),
                        colors = ButtonDefaults.buttonColors(
                            backgroundColor = getLightBlue(),
                            contentColor = Color.White
                        )
                    ) {
                        Text(text = "Show repo")
                    }
                }
            }
        }
    }
}
...
